<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Diacomp</string>
    <string name="base_action_new_dish">New dish</string>
    <string name="base_action_new_food">New food</string>
    <string name="base_subinfo_carbs">C</string>
    <string name="base_subinfo_fats">F</string>
    <string name="base_subinfo_prots">P</string>
    <string name="base_subinfo_value">V</string>
    <string name="base_tip_dish_create_fail">Failed to create dish</string>
    <string name="base_tip_dish_create_ok">Dish created</string>
    <string name="base_tip_dish_save_fail">Failed to save dish</string>
    <string name="base_tip_dish_save_ok">Dish saved</string>
    <string name="base_tip_food_create_fail">Failed to create food</string>
    <string name="base_tip_food_create_ok">Food created</string>
    <string name="base_tip_food_edit_fail">Failed to save food</string>
    <string name="base_tip_food_edit_ok">Food saved</string>
    <string name="base_tip_item_not_found">Item not found, probably it was deleted meanwhile</string>
    <string name="base_tip_items_removed">Removed items: %d</string>
    <string name="base_tip_search_failed">Failed to load data</string>
    <string name="charts_average_bs">Average blood sugar</string>
    <string name="charts_average_bs_description">Average blood sugar and standard deviation limits (the closer the better)</string>
    <string name="charts_average_calories">Average daily calories</string>
    <string name="charts_average_calories_description">Average daily calories</string>
    <string name="charts_group_daily">Daily</string>
    <string name="charts_group_history">History</string>
    <string name="charts_no_data">No data</string>
    <string name="charts_type_daily">The chart shows it\'s variation across the day</string>
    <string name="charts_type_history">The chart shows it\'s variation across the specified time period</string>
    <string name="common_action_add">Add</string>
    <string name="common_action_delete">Delete</string>
    <string name="common_action_help">Help</string>
    <string name="common_action_redo">Redo</string>
    <string name="common_action_undo">Undo</string>
    <string name="common_button_cancel">Cancel</string>
    <string name="common_button_ok">OK</string>
    <string name="common_hint_mass">Mass, g</string>
    <string name="common_hint_search">Search…</string>
    <string name="common_rate_k">Carb correction factor</string>
    <string name="common_rate_k_description">A CCF is how many points your blood sugar will increase with one unit of carbs</string>
    <string name="common_rate_q">Insulin correction factor</string>
    <string name="common_rate_q_description">An ICF is how many points your blood sugar will drop with one unit of insulin</string>
    <string name="common_rate_x">Insulin-to-carb ratio</string>
    <string name="common_rate_x_description">The insulin consumption is how much insulin you need to digest one unit of carbs</string>
    <string name="common_rectype_blood">Blood sugar</string>
    <string name="common_rectype_ins">Injection</string>
    <string name="common_rectype_meal">Meal</string>
    <string name="common_rectype_note">Note</string>
    <string name="common_tip_deleted">Items removed: %d</string>
    <string name="common_tip_error_invalid_decimal">Please provide valid decimal number</string>
    <string name="common_tip_error_invalid_preference" formatted="false">Preference \'%s\' has incorrect value, default value \'%s\' will be used instead</string>
    <string name="common_tip_unsupported_chars_removed">Some invalid characters were removed</string>
    <string name="common_unit_bs_mgdl">mg/dl</string>
    <string name="common_unit_bs_mmoll">mmol/l</string>
    <string name="common_unit_insulin">U</string>
    <string name="common_unit_mass_bu">BU</string>
    <string name="common_unit_mass_gramm">g</string>
    <string name="common_unit_value_kcal">kcal</string>
    <string name="editor_blood_error_invalid_bs">Please enter correct BS value</string>
    <string name="editor_blood_error_invalid_bs_unit">Please enter correct BS unit</string>
    <string name="editor_blood_error_invalid_finger">Please specify a finger used for BS measurement</string>
    <string name="editor_blood_field_finger">Finger</string>
    <string name="editor_blood_field_value">Value</string>
    <string name="editor_blood_title">Blood sugar</string>
    <string name="editor_common_field_time">Date and time</string>
    <string name="editor_common_save">Save</string>
    <string name="editor_common_stub_date" translatable="false">02/04/2014</string>
    <string name="editor_common_stub_time" translatable="false">09:45</string>
    <string name="editor_dish_error_empty_name">Enter a dish name</string>
    <string name="editor_dish_field_content">Content</string>
    <string name="editor_dish_field_mass">Result mass</string>
    <string name="editor_dish_field_name">Name</string>
    <string name="editor_dish_rm_empty">No mass</string>
    <string name="editor_dish_rm_hint">Enter mass:</string>
    <string name="editor_dish_rm_title">Dish mass</string>
    <string name="editor_dish_title">Dish</string>
    <string name="editor_food_error_empty_name">Please provide food name</string>
    <string name="editor_food_field_carbs">Carbohydrate, g</string>
    <string name="editor_food_field_fats">Fat, g</string>
    <string name="editor_food_field_name">Name</string>
    <string name="editor_food_field_prots">Protein, g</string>
    <string name="editor_food_field_value">Energy, kcal</string>
    <string name="editor_food_nutrition">Nutrition (per 100 g):</string>
    <string name="editor_food_title">Food</string>
    <string name="editor_ins_error_invalid_dosage">Please enter correct insulin dosage</string>
    <string name="editor_ins_field_value">Dosage, U</string>
    <string name="editor_ins_tip">You should record bolus insulin only (like Humalog® or Actrapid®). It\'s assumed your basal insulin dosage is already well-tuned.</string>
    <string name="editor_ins_title">Insulin</string>
    <string name="editor_mass_error">Wrong mass</string>
    <string name="editor_mass_title">Change mass</string>
    <string name="editor_meal_header_content">Content</string>
    <string name="editor_meal_header_dosage">Calculator</string>
    <string name="editor_meal_info">Info</string>
    <string name="editor_meal_label_carbs">Carbs:</string>
    <string name="editor_meal_label_correction">+8 g</string>
    <string name="editor_meal_label_correction_carbs">Correction (carbs):</string>
    <string name="editor_meal_label_correction_insulin">Correction (insulin):</string>
    <string name="editor_meal_label_expected_bs">BS without correction:</string>
    <string name="editor_meal_label_expected_bs_hypoglycemia">hypoglycemia</string>
    <string name="editor_meal_label_insulin_dosage">Insulin:</string>
    <string name="editor_meal_short_postprandial">Short postprandial</string>
    <string name="editor_meal_tip_meal_info" formatted="false" tools:ignore="StringFormatInvalid">Prots: %.0f g\nFats: %.0f g\nCarbs: %.0f g (%.1f BU)\nValue: %.0f kcal\nMass: %.0f g</string>
    <string name="editor_meal_title">Meal</string>
    <string name="editor_note_error_text">Please provide some text</string>
    <string name="editor_note_field_text">Text</string>
    <string name="editor_note_title">Note</string>
    <string name="editor_rate">Rate</string>
    <string name="editor_rate_error_invalid_value">Please enter correct value</string>
    <string name="editor_rate_field_time">Time</string>
    <string name="fd_action_add">Add</string>
    <string name="fd_tip_empty">Provide food/dish name</string>
    <string name="fd_tip_incorrect_mass">Provide correct mass</string>
    <string name="fd_tip_item_not_found">Item not found: %s</string>
    <string name="login_action_register">Create new account</string>
    <string name="login_action_sign_in">Sign in</string>
    <string name="login_action_sign_in_short">Sign in</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_invalid_email">Please enter correct email address</string>
    <string name="login_error_invalid_password">At least 6 characters</string>
    <string name="login_import_result_done">User data imported OK</string>
    <string name="login_import_result_fail">Failed to import user data</string>
    <string name="login_import_step_diary">Diary setup…</string>
    <string name="login_import_step_dish">Dish base setup…</string>
    <string name="login_import_step_downloading">Downloading…</string>
    <string name="login_import_step_food">Food base setup…</string>
    <string name="login_import_step_initialization">Initialization…</string>
    <string name="login_import_step_preferences">Preferences setup…</string>
    <string name="login_import_step_unzipping">Unzipping…</string>
    <string name="login_login_progress_signing_in">Signing in…</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_tip_sync_started">Sync started</string>
    <string name="login_title">Sign in</string>
    <string name="main_option_bases">Foods</string>
    <string name="main_option_charts">Analysis</string>
    <string name="main_option_diary">Diary</string>
    <string name="main_option_login">Login</string>
    <string name="main_option_preferences">Preferences</string>
    <string name="main_option_refresh">Refresh</string>
    <string name="main_title">Diacomp</string>
    <string name="notification_download_channel_description">Notifies when download is in progress</string>
    <string name="notification_download_channel_name">Downloads</string>
    <string name="notification_download_foodbase">Food base setup</string>
    <string name="notification_download_foodbase_initialization">Initialization…</string>
    <string name="notification_download_foodbase_downloading">Downloading…</string>
    <string name="notification_download_foodbase_merging">Merging…</string>
    <string name="notification_download_foodbase_saving">Saving…</string>
    <string name="notification_download_foodbase_done">Done</string>
    <string name="notification_download_foodbase_fail_no_internet">Will be resumed once connected to Internet</string>
    <string name="notification_elapsed_time_channel_description">Shows time elapsed since last meal/injection</string>
    <string name="preferences_appearance_show_time_after">Show elapsed time</string>
    <string name="preferences_diary_meal_format">Meal format</string>
    <string name="preferences_diary_use_separator">Use diary records separator</string>
    <string name="preferences_personal">Personal</string>
    <string name="preferences_personal_bs_units">Blood sugar units</string>
    <string name="preferences_personal_target_bs">Target blood sugar</string>
    <string name="preferences_rates">Correction factors</string>
    <string name="preferences_rates_auto">Calculate automatically</string>
    <string name="preferences_rates_edit">Edit correction factors…</string>
    <string name="preferences_ui">Screen settings</string>
    <string name="rates_actions_remove_all">Remove all</string>
    <string name="rates_actions_replace_with_auto">Replace with auto-values</string>
    <string name="unit_mass_action">Mass unit of measure…</string>
    <string name="welcome_login_button">Sign in</string>
    <string name="welcome_login_hint">Already have an account? Just sign in – all your data will be synced automatically.</string>
    <string name="welcome_setup_button">Quick setup</string>
    <string name="welcome_setup_hint">Meet Diacomp first time and want to look around?</string>
    <string name="welcome_subtitle">Welcome!</string>
</resources>