<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemRatesAdd"
        android:icon="@drawable/ic_action_new"
        android:title="@string/common_action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemRatesUndo"
        android:icon="@drawable/ic_undo"
        android:title="@string/common_action_undo"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemRatesRedo"
        android:icon="@drawable/ic_redo"
        android:title="@string/common_action_redo"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemRatesReplaceWithAuto"
        android:title="@string/rates_actions_replace_with_auto"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemRatesUnitMass"
        android:title="@string/unit_mass_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/itemRatesClear"
        android:title="@string/rates_actions_remove_all"
        app:showAsAction="never" />

</menu>