<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_base_add"
        android:icon="@drawable/ic_action_new"
        android:title="+"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/item_base_addFood"
                android:icon="@drawable/ic_menu_new_food"
                android:title="@string/base_action_new_food" />
            <item
                android:id="@+id/item_base_addDish"
                android:icon="@drawable/ic_menu_new_dish"
                android:title="@string/base_action_new_dish" />
        </menu>
    </item>
    <item
        android:id="@+id/item_common_login"
        android:icon="@drawable/ic_action_new_account"
        android:title="@string/main_option_login"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_diary_refresh"
        android:title="@string/main_option_refresh" />
    <item
        android:id="@+id/item_diary_preferences"
        android:icon="@drawable/menu_settings"
        android:title="@string/main_option_preferences" />

</menu>