<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        tools:context=".ActivityEditorNote">

        <TextView
            android:id="@+id/labelNoteTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_common_field_time" />

        <LinearLayout
            android:id="@+id/layoutNoteDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNoteDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="@dimen/padding_button"
                android:text="@string/editor_common_stub_date" />

            <Button
                android:id="@+id/buttonNoteTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_weight="2"
                android:padding="@dimen/padding_button"
                android:text="@string/editor_common_stub_time" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelNoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editNoteText"
            android:paddingTop="@dimen/padding_small"
            android:text="@string/editor_note_field_text" />

        <EditText
            android:id="@+id/editNoteText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonNoteOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:padding="@dimen/padding_button"
            android:text="@string/editor_common_save" />
    </LinearLayout>

</ScrollView>