<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        tools:context=".ActivityEditorBlood">

        <TextView
            android:id="@+id/labelBloodTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_common_field_time" />

        <LinearLayout
            android:id="@+id/layoutBloodDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBloodDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:padding="@dimen/padding_button"
                android:text="@string/editor_common_stub_date" />

            <Button
                android:id="@+id/buttonBloodTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_weight="2"
                android:padding="@dimen/padding_button"
                android:text="@string/editor_common_stub_time" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelBloodValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editBloodValue"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/editor_blood_field_value" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editBloodValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:digits="0123456789.,"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1">

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinnerUnit"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_weight="2"
                android:entries="@array/unit_blood_sugar_options"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelBloodFinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/spinnerBloodFinger"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/editor_blood_field_finger" />

        <Spinner
            android:id="@+id/spinnerBloodFinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fingers_middle"
            android:paddingTop="@dimen/padding_button"
            android:paddingBottom="@dimen/padding_button"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/buttonBloodOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_button"
            android:text="@string/editor_common_save" />
    </LinearLayout>

</ScrollView>