<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="org.bosik.diacomp.android.frontend.activities.ActivityLogin">

    <!-- Login progress -->

    <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/login_login_progress_signing_in"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_large">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/accountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            <RelativeLayout
                    android:id="@+id/accountLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_large"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/accountPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:hint="@string/login_prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/login_action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"/>

                <Button
                        android:id="@+id/buttonLoginShowPassword"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="38dp"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/accountPassword"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:drawableLeft="@drawable/ic_eye"
                        android:drawableStart="@drawable/ic_eye"
                        android:paddingLeft="6dp"/>
            </RelativeLayout>

            <Button
                    android:id="@+id/buttonLoginSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_action_sign_in"/>

            <Button
                    android:id="@+id/buttonLoginRegister"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_action_register"/>
        </LinearLayout>
    </ScrollView>

</merge>